deploy/k8s/pgsql.yaml
# cnpg参考： https://cloudnative-pg.io/documentation/1.20/

# pg-poc 下的资源依赖该命名空间，首次部署时一并创建
apiVersion: v1
kind: Namespace
metadata:
  name: pg-poc

---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: pg-poc-route
  namespace: pg-poc
spec:
  parentRefs:
    - name: higress-tcp-gateway
      namespace: higress-system
      sectionName: tcp-postgres-poc-30030
  rules:
    - backendRefs:
        - name: pg-poc-rw
          port: 5432
